Fixes styling on Home view for Cordova on iOS condition

--- a/public/assets/css/mobilot.css
+++ b/public/assets/css/mobilot.css
@@ -196,8 +196,11 @@ p {
   top : 7em
 }
 
-.mobile-header {
-  /*padding-top : 20px*/
+.ios-top-padding {
+  padding-top: 20px
+}
+.ios-top-margin {
+  margin-top: 20px
 }
 
 .search-type-controls
